--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap');
+
+:root {
+    --primary: #EA40A4;
+    --business: #3A82EE;
+    --personal: var(var(--primary));
+    --light: #EEE;
+    --dark: #313154;
+    --danger: #FF5B57;
+
+    --shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+
+    --business-glow: 0px 0px 4px rgba(58, 130, 238, 0.75);
+    --personal-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
+}
+
+* {
+    margin: 0; padding: 0;
+    box-sizing: border-box; 
+    font-family: 'montserrat', 'sans-serif';    
+}
+
+input:not([type="radio"]):not([tyoe="checkbox"]), button {
+    appearance: none;   
+    border: none;
+    outline: none;
+    background: none;
+    cursor: initial;
+}
